[gd_scene load_steps=46 format=3 uid="uid://rv0j4ek8e0bq"]

[ext_resource type="Texture2D" uid="uid://cuc0hgso5b7he" path="res://assets/sprites/player/male_hero_template-idle.png" id="1_3c3w1"]
[ext_resource type="Script" uid="uid://bl4noxsft20wy" path="res://scenes/player/player.gd" id="1_wnvi2"]
[ext_resource type="Texture2D" uid="uid://xmiyeiap6df6" path="res://assets/sprites/player/male_hero_template-slide.png" id="2_aqcbf"]
[ext_resource type="Texture2D" uid="uid://dl7q2h74bfkpu" path="res://assets/sprites/player/male_hero_template-run.png" id="2_wnvi2"]
[ext_resource type="Texture2D" uid="uid://c5yqy42ckfunf" path="res://assets/sprites/player/male_hero_template-fall_loop.png" id="3_gskgj"]
[ext_resource type="Texture2D" uid="uid://fkbhjbyab44i" path="res://assets/sprites/player/male_hero_template-jump.png" id="5_06mnu"]
[ext_resource type="PackedScene" uid="uid://dk0h5acav7nc6" path="res://scenes/components/gravity.tscn" id="7_npwbq"]
[ext_resource type="PackedScene" uid="uid://db5rxj6t7jqk4" path="res://scenes/components/movement_component.tscn" id="8_pn6s4"]
[ext_resource type="PackedScene" uid="uid://c3mdjjastif0n" path="res://scenes/components/input_component.tscn" id="9_7oing"]
[ext_resource type="PackedScene" uid="uid://44d4hx5abgvi" path="res://scenes/components/animation_component.tscn" id="10_7oing"]
[ext_resource type="PackedScene" uid="uid://cvatfdkchnop2" path="res://scenes/components/jump_component.tscn" id="11_5stf6"]
[ext_resource type="PackedScene" uid="uid://cybaqaepqsu8" path="res://scenes/components/advanced_jump_component.tscn" id="12_180ig"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mlfor"]
atlas = ExtResource("2_aqcbf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m0d2"]
atlas = ExtResource("2_aqcbf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nth8"]
atlas = ExtResource("3_gskgj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tqfn"]
atlas = ExtResource("3_gskgj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_stbqk"]
atlas = ExtResource("3_gskgj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c3w1"]
atlas = ExtResource("1_3c3w1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnvi2"]
atlas = ExtResource("1_3c3w1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_83hs8"]
atlas = ExtResource("1_3c3w1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8kxw"]
atlas = ExtResource("1_3c3w1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqcbf"]
atlas = ExtResource("1_3c3w1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gskgj"]
atlas = ExtResource("1_3c3w1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_06mnu"]
atlas = ExtResource("1_3c3w1")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhpjh"]
atlas = ExtResource("1_3c3w1")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndjxb"]
atlas = ExtResource("1_3c3w1")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qrx2"]
atlas = ExtResource("1_3c3w1")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y617q"]
atlas = ExtResource("5_06mnu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eyfg"]
atlas = ExtResource("5_06mnu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76mgg"]
atlas = ExtResource("5_06mnu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddnt4"]
atlas = ExtResource("5_06mnu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lmo"]
atlas = ExtResource("5_06mnu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_234y4"]
atlas = ExtResource("5_06mnu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b32pr"]
atlas = ExtResource("2_wnvi2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbkom"]
atlas = ExtResource("2_wnvi2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g0h"]
atlas = ExtResource("2_wnvi2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4f8b"]
atlas = ExtResource("2_wnvi2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8epa"]
atlas = ExtResource("2_wnvi2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w24id"]
atlas = ExtResource("2_wnvi2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewl2"]
atlas = ExtResource("2_wnvi2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofhxi"]
atlas = ExtResource("2_wnvi2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu5hk"]
atlas = ExtResource("2_wnvi2")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6miu"]
atlas = ExtResource("2_wnvi2")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yu5hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlfor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m0d2")
}],
"loop": false,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tqfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stbqk")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c3w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnvi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83hs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8kxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqcbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gskgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06mnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhpjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndjxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qrx2")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y617q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eyfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddnt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234y4")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b32pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbkom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4f8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8epa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w24id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofhxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu5hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6miu")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_83hs8"]
radius = 6.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "animation_component", "jump_component")]
collision_layer = 2
script = ExtResource("1_wnvi2")
gravity_component = NodePath("gravity_component")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("animation_component")
jump_component = NodePath("AdvancedJumpComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_yu5hk")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.79664254

[node name="Idle Col" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_83hs8")

[node name="gravity_component" parent="." instance=ExtResource("7_npwbq")]

[node name="MovementComponent" parent="." instance=ExtResource("8_pn6s4")]

[node name="InputComponent" parent="." instance=ExtResource("9_7oing")]

[node name="animation_component" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("10_7oing")]
sprite = NodePath("../AnimatedSprite2D")

[node name="JumpComponent" parent="." instance=ExtResource("11_5stf6")]

[node name="AdvancedJumpComponent" parent="." instance=ExtResource("12_180ig")]
